vcluster_versioned_docs/version-0.26.0/_partials/config/deploy.mdx

<details className="config-field" data-expandable="true">
<summary>

## `deploy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy}

Deploy holds configuration for the deployment of vCluster.

</summary>




<details className="config-field" data-expandable="true">
<summary>

### `kubeProxy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-kubeProxy}

KubeProxy holds dedicated kube proxy configuration.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#deploy-kubeProxy-enabled}

Enabled defines if the kube proxy should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `image` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-kubeProxy-image}

Image is the image for the kube-proxy.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `imagePullPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-kubeProxy-imagePullPolicy}

ImagePullPolicy is the policy how to pull the image.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `nodeSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#deploy-kubeProxy-nodeSelector}

NodeSelector is the node selector for the kube-proxy.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `priorityClassName` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-kubeProxy-priorityClassName}

PriorityClassName is the priority class name for the kube-proxy.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `tolerations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#deploy-kubeProxy-tolerations}

Tolerations is the tolerations for the kube-proxy.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `extraEnv` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#deploy-kubeProxy-extraEnv}

ExtraEnv is the extra environment variables for the kube-proxy.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `extraArgs` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#deploy-kubeProxy-extraArgs}

ExtraArgs are additional arguments to pass to the kube-proxy.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `config` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-kubeProxy-config}

Config is the config for the kube-proxy that will be merged into the default kube-proxy config. More information can be found here:
https://kubernetes.io/docs/reference/config-api/kube-proxy-config.v1alpha1/#kubeproxy-config-k8s-io-v1alpha1-KubeProxyConfiguration

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `metallb` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-metallb}

Metallb holds dedicated metallb configuration.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#deploy-metallb-enabled}

Enabled defines if metallb should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `controllerImage` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-metallb-controllerImage}

ControllerImage is the image for metallb controller.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `speakerImage` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-metallb-speakerImage}

SpeakerImage is the image for metallb speaker.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `ipAddressPool` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-metallb-ipAddressPool}

IPAddressPool is the IP address pool to use for metallb.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `addresses` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> {#deploy-metallb-ipAddressPool-addresses}

Addresses is a list of IP addresses to use for the IP address pool.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `l2Advertisement` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#deploy-metallb-ipAddressPool-l2Advertisement}

L2Advertisement defines if L2 advertisement should be enabled for the IP address pool.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `cni` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-cni}

CNI holds dedicated CNI configuration.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `flannel` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-cni-flannel}

Flannel holds dedicated Flannel configuration.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#deploy-cni-flannel-enabled}

Enabled defines if Flannel should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `image` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-cni-flannel-image}

Image is the image for Flannel main container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `initImage` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-cni-flannel-initImage}

InitImage is the image for Flannel init container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `imagePullPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-cni-flannel-imagePullPolicy}

ImagePullPolicy is the policy how to pull the image.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `localPathProvisioner` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-localPathProvisioner}

LocalPathProvisioner holds dedicated local path provisioner configuration.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#deploy-localPathProvisioner-enabled}

Enabled defines if LocalPathProvisioner should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `image` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-localPathProvisioner-image}

Image is the image for local path provisioner.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `imagePullPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-localPathProvisioner-imagePullPolicy}

ImagePullPolicy is the policy how to pull the image.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `nodePath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-localPathProvisioner-nodePath}

NodePath is the path on the node where to create the persistent volume directories.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `ingressNginx` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-ingressNginx}

IngressNginx holds dedicated ingress-nginx configuration.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#deploy-ingressNginx-enabled}

Enabled defines if ingress-nginx should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `defaultIngressClass` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#deploy-ingressNginx-defaultIngressClass}

DefaultIngressClass defines if the deployed ingress class should be the default ingress class.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `metricsServer` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-metricsServer}

MetricsServer holds dedicated metrics server configuration.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#deploy-metricsServer-enabled}

Enabled defines if metrics server should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `volumeSnapshotController` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-volumeSnapshotController}

VolumeSnapshotController holds dedicated CSI snapshot-controller configuration.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#deploy-volumeSnapshotController-enabled}

Enabled defines if the CSI volumes snapshot-controller should be enabled.

</summary>



</details>


</details>


</details>
